# backoff-simulator

./: .gitignore  CONTRIBUTING.md  README.md  aws_simulation.toml  backoff_simulator.py  inlined.py  justfile  make_inlined.py  notebook.py  pyproject.toml  sim.py  simulations.toml
src/backoff_simulator/: __init__.py  __main__.py  cli.py  config.py  simulation.py
test/: test_simulate.py
