[project]
name = "backoff-simulator"
version = "0.1.0"
description = "Simulates various backoff strategies for contending writes over the network."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "marimo>=0.22.4",
    "matplotlib>=3.10.8",
    "tabulate>=0.10.0",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
