[project]
name = "backoff-simulator"
version = "0.1.0"
authors = [{ name = "Cosmo Grant", email = "cosmodgrant@gmail.com" }]
description = "Simulates backoff strategies for contending writes over the network."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["marimo>=0.22.4", "matplotlib>=3.10.8", "tabulate>=0.10.0"]

[project.urls]
Homepage = "https://github.com/cosmo-grant/backoff-simulator"

[project.scripts]
backoff-simulator = "backoff_simulator.cli:app"

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"
